--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             const renderer = new THREE.WebGLRenderer({ canvas });
             renderer.autoClearColor = true;
 
-            const scale = .5;
+            const scale = 1;
             const camera = new THREE.OrthographicCamera(
                 -1, // left
                 1, // right
