remove 4x2 matrix multiplication that was failing safari

--- a/2/index.html
+++ b/2/index.html
@@ -91,10 +91,11 @@ vec2 hash2(vec2 v)
 
 vec4 hash4(vec2 v)
 {
-    vec4 p = vec4(v * mat4x2( 127.1, 311.7,
-                              269.5, 183.3,
-                              113.5, 271.9,
-                              246.1, 124.6 ));
+    vec4 p = vec4(
+        v[0] * 127.1 + v[1] * 311.7,
+        v[0] * 269.5 + v[1] * 183.3,
+        v[0] * 113.5 + v[1] * 271.9,
+        v[0] * 246.1 + v[1] * 124.6);
     return fract(sin(p)*43758.5453123);
 }
 
