finalize look for

--- a/2/index.html
+++ b/2/index.html
@@ -54,15 +54,16 @@ const float SPEED = 1.;
 const float STRIP_CHARS_MIN =  7.;
 const float STRIP_CHARS_MAX = 40.;
 const float STRIP_CHAR_HEIGHT = 0.15;
+const float INV_STRIP_CHAR_HEIGHT = 1. / STRIP_CHAR_HEIGHT;
 const float STRIP_CHAR_WIDTH = 0.10;
 const float ZCELL_SIZE = 1. * (STRIP_CHAR_HEIGHT * STRIP_CHARS_MAX);  //the multiplier can't be less than 1.
 const float XYCELL_SIZE = 12. * STRIP_CHAR_WIDTH;  //the multiplier can't be less than 1.
 
 const int BLOCK_SIZE = 10;  //in cells
 const int BLOCK_GAP = 2;    //in cells
+const float GAP_SIZE = float(BLOCK_GAP) * XYCELL_SIZE;
 
-const float WALK_SPEED = 1. * XYCELL_SIZE;
-const float BLOCKS_BEFORE_TURN = 3.;
+const float WALK_SPEED = .3;
 
 
 //        ----  random  ----
@@ -155,6 +156,10 @@ vec3 rain(vec3 ro3, vec3 rd3, float time) {
 
     bool prefer_dx = abs(rd2.x) > abs(rd2.y);
     float t3_to_t2 = prefer_dx ? rd3.x / rd2.x : rd3.y / rd2.y;
+    float inv_t3_to_t2 = 1. / t3_to_t2;
+
+    const float INV_BLOCK_SIZE = 1. / float(BLOCK_SIZE);
+    const float INV_ZCELL_SIZE = 1. / ZCELL_SIZE;
 
     // at first, horizontal space (xy) is divided into cells (which are columns in 3D)
     // then each xy-cell is divided into vertical cells (along z) - each of these cells contains one raindrop
@@ -180,32 +185,33 @@ vec3 rain(vec3 ro3, vec3 rd3, float time) {
             next_cell.y += cell_shift.y;  //cross through the x-axis side
         }
         //now t2 is the value of the end point in the current cell (and the same point is the start value in the next cell)
-
         //  gap cells
-        vec2 cell_in_block = fract(vec2(cell) / float(BLOCK_SIZE));
-        float gap = float(BLOCK_GAP) / float(BLOCK_SIZE);
+        vec2 cell_in_block = fract(vec2(cell) * INV_BLOCK_SIZE);
+        float gap = float(BLOCK_GAP) * INV_BLOCK_SIZE;
         if (cell_in_block.x < gap || cell_in_block.y < gap || (cell_in_block.x < (gap+0.1) && cell_in_block.y < (gap+0.1))) {
             continue;
         }
 
         //  return to 3d - we have start and end points of the ray segment inside the column (t3s and t3e)
-        float t3s = t2s / t3_to_t2;
+        float t3s = t2s * inv_t3_to_t2;
 
         //  move through z-cells of the current column in the ray direction (don't need much to check, two nearest cells are enough)
         float pos_z = ro3.z + rd3.z * t3s;
         float xycell_hash = hash(vec2(cell));
         float z_shift = xycell_hash*11. - time * (0.5 + xycell_hash * 1.0 + xycell_hash * xycell_hash * 1.0 + pow(xycell_hash, 16.) * 3.0);  //a different z shift for each xy column
-        float char_z_shift = floor(z_shift / STRIP_CHAR_HEIGHT);
+        float char_z_shift = floor(z_shift * INV_STRIP_CHAR_HEIGHT);
         z_shift = char_z_shift * STRIP_CHAR_HEIGHT;
-        int zcell = int(floor((pos_z - z_shift)/ZCELL_SIZE));  //z-cell index
-        for (int j=0; j<2; j++) {  //2 iterations is enough if camera doesn't look much up or down
+        int zcell = int(floor((pos_z - z_shift)*INV_ZCELL_SIZE));  //z-cell index
+
+        // Note: iterations set to 1 because camera no longer rotates.
+        for (int j=0; j<1; j++) {  //2 iterations is enough if camera doesn't look much up or down
             //  calcaulate coordinates of the target (raindrop)
             vec4 cell_hash = hash4(vec3(ivec3(cell, zcell)));
             vec4 cell_hash2 = fract(cell_hash * vec4(127.1, 311.7, 271.9, 124.6));
 
             float chars_count = cell_hash.w * (STRIP_CHARS_MAX - STRIP_CHARS_MIN) + STRIP_CHARS_MIN;
             float target_length = chars_count * STRIP_CHAR_HEIGHT;
-            float target_rad = STRIP_CHAR_WIDTH / 2.;
+            float target_rad = STRIP_CHAR_WIDTH * .5;
             float target_z = (float(zcell)*ZCELL_SIZE + z_shift) + cell_hash.z * (ZCELL_SIZE - target_length);
             vec2 target = vec2(cell) * XYCELL_SIZE + target_rad + cell_hash.xy * (XYCELL_SIZE - target_rad*2.);
 
@@ -249,32 +255,12 @@ vec3 rain(vec3 ro3, vec3 rd3, float time) {
     return result.xyz * result.a;
 }
 
-
 //        ----  main, camera  ----
-
 vec2 rotate(vec2 v, float a) {
     float s = sin(a);
 	float c = cos(a);
     mat2 m = mat2(c, -s, s, c);
     return m * v;
-}
-
-vec3 rotateX(vec3 v, float a) {
-    float s = sin(a);
-    float c = cos(a);
-    return mat3(1.,0.,0.,0.,c,-s,0.,s,c) * v;
-}
-
-vec3 rotateY(vec3 v, float a) {
-    float s = sin(a);
-    float c = cos(a);
-    return mat3(c,0.,-s,0.,1.,0.,s,0.,c) * v;
-}
-
-vec3 rotateZ(vec3 v, float a) {
-    float s = sin(a);
-    float c = cos(a);
-    return mat3(c,-s,0.,s,c,0.,0.,0.,1.) * v;
 }
 
 float smoothstep1(float x) {
@@ -290,140 +276,12 @@ void mainImage( out vec4 fragColor, in vec2 fragCoord )
     }
 
 	vec2 uv = (fragCoord.xy * 2. - iResolution.xy) / iResolution.y;
-
     float time = iTime * SPEED;
-
-    const float turn_rad = 0.25 / BLOCKS_BEFORE_TURN;   //0 .. 0.5
-    const float turn_abs_time = (PI/2.*turn_rad) * 1.5;  //multiplier different than 1 means a slow down on turns
-    const float turn_time = turn_abs_time / (1. - 2.*turn_rad + turn_abs_time);  //0..1, but should be <= 0.5
-
-    float level1_size = float(BLOCK_SIZE) * BLOCKS_BEFORE_TURN * XYCELL_SIZE;
-    float level2_size = 4. * level1_size;
-    float gap_size = float(BLOCK_GAP) * XYCELL_SIZE;
-
-    vec3 ro = vec3(gap_size/2., gap_size/2., 0.);
+    vec3 ro = vec3(GAP_SIZE/2., GAP_SIZE/2., 0.);
     vec3 rd = vec3(uv.x, 2.0, uv.y);
 
-    float tq = fract(time / (level2_size*4.) * WALK_SPEED);  //the whole cycle time counter
-    float t8 = fract(tq*4.);  //time counter while walking on one of the four big sides
-    float t1 = fract(t8*8.);  //time counter while walking on one of the eight sides of the big side
-
-    vec2 prev;
-    vec2 dir;
-    if (tq < 0.25) {
-        prev = vec2(0.,0.);
-        dir = vec2(0.,1.);
-    } else if (tq < 0.5) {
-        prev = vec2(0.,1.);
-        dir = vec2(1.,0.);
-    } else if (tq < 0.75) {
-        prev = vec2(1.,1.);
-        dir = vec2(0.,-1.);
-    } else {
-        prev = vec2(1.,0.);
-        dir = vec2(-1.,0.);
-    }
-    float angle = floor(tq * 4.);  //0..4 wich means 0..2*PI
-
-    prev *= 4.;
-
-    const float first_turn_look_angle = 0.4;
-    const float second_turn_drift_angle = 0.5;
-    const float fifth_turn_drift_angle = 0.25;
-
-    vec2 turn;
-    float turn_sign = 0.;
-    vec2 dirL = rotate(dir, -PI/2.);
-    vec2 dirR = -dirL;
-    float up_down = 0.;
-    float rotate_on_turns = 1.;
-    float roll_on_turns = 1.;
-    float add_angel = 0.;
-    if (t8 < 0.125) {
-        turn = dirL;
-        //dir = dir;
-        turn_sign = -1.;
-        angle -= first_turn_look_angle * (max(0., t1 - (1. - turn_time*2.)) / turn_time - max(0., t1 - (1. - turn_time)) / turn_time * 2.5);
-        roll_on_turns = 0.;
-    } else if (t8 < 0.250) {
-        prev += dir;
-        turn = dir;
-        dir = dirL;
-        angle -= 1.;
-        turn_sign = 1.;
-        add_angel += first_turn_look_angle*0.5 + (-first_turn_look_angle*0.5+1.0+second_turn_drift_angle)*t1;
-        rotate_on_turns = 0.;
-        roll_on_turns = 0.;
-    } else if (t8 < 0.375) {
-        prev += dir + dirL;
-        turn = dirR;
-        //dir = dir;
-        turn_sign = 1.;
-        add_angel += second_turn_drift_angle*sqrt(1.-t1);
-        //roll_on_turns = 0.;
-    } else if (t8 < 0.5) {
-        prev += dir + dir + dirL;
-        turn = dirR;
-        dir = dirR;
-        angle += 1.;
-        turn_sign = 0.;
-        up_down = sin(t1*PI) * 0.37;
-    } else if (t8 < 0.625) {
-        prev += dir + dir;
-        turn = dir;
-        dir = dirR;
-        angle += 1.;
-        turn_sign = -1.;
-        up_down = sin(-min(1., t1/(1.-turn_time))*PI) * 0.37;
-    } else if (t8 < 0.750) {
-        prev += dir + dir + dirR;
-        turn = dirL;
-        //dir = dir;
-        turn_sign = -1.;
-        add_angel -= (fifth_turn_drift_angle + 1.) * smoothstep1(t1);
-        rotate_on_turns = 0.;
-        roll_on_turns = 0.;
-    } else if (t8 < 0.875) {
-        prev += dir + dir + dir + dirR;
-        turn = dir;
-        dir = dirL;
-        angle -= 1.;
-        turn_sign = 1.;
-        add_angel -= fifth_turn_drift_angle - smoothstep1(t1) * (fifth_turn_drift_angle * 2. + 1.);
-        rotate_on_turns = 0.;
-        roll_on_turns = 0.;
-    } else {
-        prev += dir + dir + dir;
-        turn = dirR;
-        //dir = dir;
-        turn_sign = 1.;
-        angle += fifth_turn_drift_angle * (1.5*min(1., (1.-t1)/turn_time) - 0.5*smoothstep1(1. - min(1.,t1/(1.-turn_time))));
-    }
-
-    angle += add_angel;
-    rd = rotateX(rd, up_down);
-
-    vec2 p;
-    if (turn_sign == 0.) {
-        //  move forward
-        p = prev + dir * (turn_rad + 1. * t1);
-    }
-    else if (t1 > (1. - turn_time)) {
-        //  turn
-        float tr = (t1 - (1. - turn_time)) / turn_time;
-        vec2 c = prev + dir * (1. - turn_rad) + turn * turn_rad;
-        p = c + turn_rad * rotate(dir, (tr - 1.) * turn_sign * PI/2.);
-        angle += tr * turn_sign * rotate_on_turns;
-        rd = rotateY(rd, sin(tr*turn_sign*PI) * 0.2 * roll_on_turns);  //roll
-    }  else  {
-        //  move forward
-        t1 /= (1. - turn_time);
-        p = prev + dir * (turn_rad + (1. - turn_rad*2.) * t1);
-    }
-
-    rd = rotateZ(rd, angle * PI/2.);
-
-    ro.xy += level1_size * p;
+    //  move forward
+    ro.xy += vec2(0.,0.) * 4. + vec2(0.,1.) * (1. * time*WALK_SPEED);
 
     ro += rd * 0.2;
     rd = normalize(rd);
