adds fixes for bad geometry due to time overflow

--- a/2/index.html
+++ b/2/index.html
@@ -104,6 +104,9 @@ vec4 hash4(vec3 v)
     return fract(sin(p)*43758.5453123);
 }
 
+float modf(float a, float b) {
+    return a-b * floor(a/b);
+}
 
 //        ----  symbols  ----
 //  Slightly modified version of "runes" by FabriceNeyret2 -  https://www.shadertoy.com/view/4ltyDM
@@ -229,10 +232,14 @@ vec3 rain(vec3 ro3, vec3 rd3, float time) {
                         float q = fract(v * chars_count);
                         vec2 char_hash = hash2(vec2(c+char_z_shift, cell_hash2.x));
                         if (char_hash.x >= 0.1 || c == 0.) {  //10% of missed symbols
-                            float time_factor = floor(c == 0. ? time*5.0 :  //first symbol is changed fast
+                            float time_factor = floor(
+                                    c == 0. ? time*5.0 :  //first symbol is changed fast
                                     time*(1.0*cell_hash2.z +   //strips are changed sometime with different speed
                                             cell_hash2.w*cell_hash2.w*4.*pow(char_hash.y, 4.)));  //some symbols in some strips are changed relatively often
-                            float a = random_char(vec2(char_hash.x, time_factor), vec2(u,q), max(1., 3. - c/2.)*0.2);  //alpha
+                            float a = random_char(
+                                vec2(char_hash.x, modf(time_factor, 60.0)),
+                                vec2(u,q),
+                                max(1., 3. - c/2.)*0.2);  //alpha
                             a *= clamp((chars_count - 0.5 - c) / 2., 0., 1.);  //tail fade
                             if (a > 0.) {
                                 float attenuation = 1. + pow(0.06*tmin/t3_to_t2, 2.);
@@ -255,17 +262,6 @@ vec3 rain(vec3 ro3, vec3 rd3, float time) {
     return result.xyz * result.a;
 }
 
-//        ----  main, camera  ----
-vec2 rotate(vec2 v, float a) {
-    float s = sin(a);
-	float c = cos(a);
-    mat2 m = mat2(c, -s, s, c);
-    return m * v;
-}
-
-float smoothstep1(float x) {
-    return smoothstep(0., 1., x);
-}
 
 void mainImage( out vec4 fragColor, in vec2 fragCoord )
 {
@@ -286,6 +282,7 @@ void mainImage( out vec4 fragColor, in vec2 fragCoord )
     ro += rd * 0.2;
     rd = normalize(rd);
 
+    float t = time;
     vec3 col = rain(ro, rd, time);
 
     fragColor = vec4(col, 1.);
